test/spec_vectors/global/fail/module_15.wat
(module (global (import "test" "global-i32") i32) (global i32 (global.get 0) (global.get 0)))